[tool.poetry]
name = "moto-issue-demo"
version = "0.1.0"
description = ""
authors = ["Mark Larah <markl@yelp.com>", "Gary Windham <windhamg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "1.28.62"

[tool.poetry.dev-dependencies]
pytest = "^7"
moto = {extras = ["dynamodb"], version = "^4.2.6"}

[tool.poetry.scripts]
order-breakfast = "moto_issue_demo.order_breakfast:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
